# Kreatives

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  README.md  package.json
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/content/: content.controller.ts  content.service.ts
backend/src/subscription/: subscription.controller.ts  subscription.service.ts
contract/: .gitignore  Cargo.toml  README.md
contract/contracts/subscription/: Cargo.toml
contract/contracts/subscription/src/: lib.rs  test.rs
frontend/: .env.example  README.md  next.config.js  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: WalletConnect.tsx
frontend/src/lib/: stellar.ts
